# GPMC

./: .gitignore  CHANGELOG.md  CMakeLists.txt  INSTALL.md  LICENSE.md  README.md  THIRD_PARTY_NOTICES.md  build.sh  clean.sh  pybuild.sh  starexec_build
Glucose/: CMakeLists.txt
cli/: Main.cc  Options.cc  Options.h  PreprocMain.cc  Report.cc  Report.h  SignalHandling.cc  SignalHandling.h  Version.hpp.in  WeightCheck.h
core/: Component.h  ComponentCache.cc  ComponentManager.cc  Config.cc  Config.h  Counter.cc  Counter.h  Dimacs.h  Instance.cc  Instance.h  Main.cc  Makefile  README.txt  Solver.cc  Solver.h
counter/: CNF.cc  Component.h  ComponentAnalyzer.cc  ComponentAnalyzer.h  ComponentCache.cc  ComponentCache.h  ComponentManager.cc  ComponentManager.h  Counter.cc  CounterImpl.cc  CounterImpl.h  Decision.h  Normalizer.cc  Normalizer.h  TDScorer.cc  TDScorer.h  VSADSSelector.h  VarSelector.cc  VarSelector.h  VarSelectorArgs.h  VarSelectorFactory.h
ddnnf/: DecisionTree.cc  DecisionTree.h
ddnnf/enumerator/: README.md  ddnnf.py  main.py  test.cnf  test.nnf
example/: README.txt  mc2022_track3_003.nnf
flow-cutter-pace17/: CMakeLists.txt
gpmc/: CMakeLists.txt  INSTALL.md  README.md  build.sh
gpmc/core/: Component.h  ComponentCache.cc  ComponentManager.cc  Counter.cc  Counter.h  Dimacs.h  Main.cc
gpmc/flow-cutter-pace17/: CMakeLists.txt
gpmc/utils/: ParseUtils.h
include/GPMC/: Component.h  Config.h  Counter.h  Instance.h
include/GPMC/preprocessor/: IFlowCutter.h  Preprocessor.h  TestSolver.h  TreeDecomposition.h
include/GPMC/preprocessor/lib_sharpsat_td/: subsumer.hpp
include/gpmc/: CNF.h  Counter.h  Preprocessor.h  Semiring.h  Types.h
include/gpmc/config/: CounterConfig.h  PreprocessorConfig.h  TDScorerConfig.h  VarSelectMode.h  VarSelectorConfig.h
include/gpmc/diagnostics/: SetupReport.h
include/gpmc/semirings/: Integer.h  Rational.h
mtl/: template.mk
preprocessor/: CMakeLists.txt  IFlowCutter.cc  Instance.cc  Instance.h  Preprocessor.cc  Preprocessor.h  TestSolver.cc  TestSolver.h  TreeDecomposition.cc  TreeDecomposition.h  graph.cpp  graph.hpp  instance.cpp  instance.hpp  main.cpp  preprocessor.cpp  preprocessor.hpp  treewidth.cpp  treewidth.hpp
python/: gpmc_pywrapper.cpp  gpmc_pywrapper.h
samples/: pmc.cc  wmc.cc
src/: ComponentCache.cc  ComponentManager.cc  Config.cc  Counter.cc  Instance.cc  Main.cc
src/preprocessor/: IFlowCutter.cc  Preprocessor.cc  TestSolver.cc  TreeDecomposition.cc
src/preprocessor/lib_sharpsat_td/: subsumer.cpp
td/: IFlowCutter.cc  IFlowCutter.h  PrimalGraph.cc  PrimalGraph.h  TreeDecomposition.cc  TreeDecomposition.h
tests/: run_tests.sh
tests/cnf/: t01_mc_tiny.cnf  t02_mc_unsat.cnf  t03_mc_free.cnf  t04_mc_chain.cnf  t05_pmc_simple.cnf  t06_wmc_simple.cnf  t07_pmc_nonproj_sat_then_unsat.cnf  t08_mc_long_clause.cnf  t09_mc_long_clauses.cnf  t10_wmc_twovars.cnf  t11_wmc_unsat.cnf  t12_wmc_no_clause.cnf  t13_wmc_one_side.cnf  t14_wmc_unit_prop.cnf  t15_wmc_default_weight.cnf  t16_pwmc_simple.cnf  t17_pwmc_nonproj_free.cnf  t18_pwmc_unsat.cnf  t19_pwmc_constraint.cnf  t20_pwmc_twoproj.cnf  t21_wmc_equiv.cnf  t22_wmc_equiv_chain.cnf  t23_wmc_equiv_isolated.cnf  t24_wmc_equiv_neg.cnf  t25_pwmc_equiv_promote.cnf  t26_pmc_equiv_promote.cnf  t27_mc_equiv.cnf  t28_mc_equiv_isolated.cnf  t29_mc_def_and.cnf  t30_wmc_dve_asym.cnf  t31_wmc_dve_gate_asym.cnf  t32_wmc_merge_then_free.cnf  t33_pwmc_nonproj_weight.cnf  t34_imc_integer.cnf  t35_pmc_dve_lowfreq.cnf  t36_mc_isolated_shift.cnf  t37_pwmc_negative_weight.cnf
utils/: Bitset.h  System.cc  Timing.h
