cmake_minimum_required(VERSION 3.0)

include_directories(${CMAKE_CURRENT_SOURCE_DIR} /usr/local/include)
add_compile_options("$<$<CONFIG:Debug>:-O0>")
add_compile_options(-Wall -Wno-parentheses -Wno-format -Wno-sign-compare -Wno-unused-variable -Wno-unused-result)
add_compile_options("$<$<CXX_COMPILER_ID:GNU>:-Wno-literal-suffix;-Wno-class-memaccess>")
add_compile_options("$<$<CXX_COMPILER_ID:Clang>:-Wno-reserved-user-defined-literal;-Wno-gnu-array-member-paren-init>")
add_compile_options("$<$<CXX_COMPILER_ID:AppleClang>:-Wno-redundant-move;-Wno-undefined-var-template;-Wno-reserved-user-defined-literal;-Wno-gnu-array-member-paren-init;-std=c++11>")

if(GPMC_USE_STATIC_LIBS)
  add_library(glucose_static STATIC core/Solver.cc utils/Options.cc utils/System.cc)
  target_compile_definitions(glucose_static PRIVATE $<$<CONFIG:Debug>:DEBUG> __STDC_FORMAT_MACROS __STDC_LIMIT_MACROS)
  if(GPMC_BUILD_PYTHON)
    set_target_properties(glucose_static PROPERTIES POSITION_INDEPENDENT_CODE ON)
  endif()
else()
  add_library(glucose_shared SHARED core/Solver.cc utils/Options.cc utils/System.cc)
  target_compile_definitions(glucose_shared PRIVATE $<$<CONFIG:Debug>:DEBUG> __STDC_FORMAT_MACROS __STDC_LIMIT_MACROS)
endif()
